Fix: Remove duplicate action and invalid permissions in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,6 @@
     "storage",
     "clipboardWrite",
     "scripting",
-    "action",
     "downloads",
     "activeTab"
   ],
@@ -16,7 +15,8 @@
     "<all_urls>"
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "Image Tool Pro"
   },
   "background": {
     "service_worker": "background.js",
