Add Gympal integration with enhanced UX features
- Add content script for web.gympal.com integration
- Inject Remove Background button into Edit Product modal
- Add undo functionality to restore original images
- Replace alerts with toast notifications
- Add URL validation before processing
- Improve visual feedback with loading states
- Add debouncing for better performance
- Add accessibility improvements (ARIA labels, keyboard support)
- Refactor background.js with reusable functions
- Add message handler for content script communication

--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,12 @@
   "background": {
     "service_worker": "background.js",
     "type": "module"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://web.gympal.com/*"],
+      "js": ["gympal.js"],
+      "run_at": "document_idle"
+    }
+  ]
 }
